Refactor authentication and user management in Musike backend. Removed OAuth2Controller and related services, streamlined security configuration, and enhanced user registration and login processes. Added detailed logging for user actions and improved error handling. Updated application properties for CORS and OAuth2 settings.